--- a/azure-pipelines.-create-rg.yaml
+++ b/azure-pipelines.-create-rg.yaml
@@ -32,5 +32,5 @@ stages:
     - task: PublishBuildArtifacts@1
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-        ArtifactName: 'terraform-manifests'
+        ArtifactName: 'terraform-rg'
         publishLocation: 'Container'  
